src/objects/HR_Absence__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Comments__c</fullName>
        <label>Employee Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR-Absences</relationshipLabel>
        <relationshipName>HR_Absences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Finish_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Manager_Email__c</fullName>
        <label>Line Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <label>Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Employee__r.Manager__r.FirstName &amp; &quot; &quot; &amp;  Employee__r.Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Submitted_Online__c</fullName>
        <label>Name Submitted Online</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <label>Departments</label>
        <picklist>
            <picklistValues>
                <fullName>Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIC &amp; Linkage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linkage/ Mentoring &amp; IPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASIO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Study Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncertified Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Off In Lieu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Unpaid Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force Majeure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compassionate Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funeral Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bereavement Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statutory Maternity Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carers Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time In Lieu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exam Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>HR-Absence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Finish_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Sites__c</columns>
        <columns>Department_Code__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Name_Submitted_Online__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Applied</value>
        </filters>
        <label>Awaiting Approval</label>
        <sharedTo>
            <group>Line_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR-Absences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>